# Quip

./: .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .prettierignore  .vercelignore  AI-Shorts-System-Breakdown.md  CLAUDE.md  CLIPFLOW_DEV_PLAN.md  DESIGN.md  README.md  cookies.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  www.youtube.com_cookies.txt
apps/web/: .env.local.example  DEPLOY.md  PERF.md  eslint.config.mjs  lighthouserc.json  middleware.ts  next.config.ts  package.json  proxy.ts  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: CaptionOverlay.tsx  ClipCard.tsx  ClipEditor.tsx  ClipEditorModal.tsx  ClipGrid.tsx  ClipPreview.tsx  CoWatch.tsx  CoWatchPanel.tsx  ErrorPanel.tsx  ExportMenu.tsx  JobProgress.tsx  LibassLayer.tsx  PendingThumb.tsx  PresetStrip.tsx  ReasonChip.tsx  ReconnectBanner.tsx  SourceForm.tsx  StatusBadge.tsx  TimelineEditor.tsx  VideoMap.tsx
apps/web/i18n/: locale.test.ts  locale.ts  request.ts
apps/web/lib/: agentChat.test.ts  agentChat.ts  api.test.ts  api.ts  assStyle.test.ts  assStyle.ts  captionFit.test.ts  captionFit.ts  captionFitBrowser.ts  captionedDownload.test.ts  clipCache.test.ts  clipCache.ts  cn.ts  connectionError.test.ts  connectionError.ts  disposableEmail.ts  editorPrefs.test.ts  editorPrefs.ts  editorShortcuts.test.ts  editorShortcuts.ts  faq.ts  format.test.ts  format.ts  frameIdentity.test.ts  frameIdentity.ts  hookPresets.ts  jsonld.ts  landingContent.ts  libass-wasm.d.ts  momentKinds.ts  overlayBox.ts  plans.ts  polar-api.ts  polar.ts  recent.ts  reframeFrame.test.ts  reframeFrame.ts  safeAreas.test.ts  safeAreas.ts  site.ts  (+11 more)
apps/web/messages/: en.json  ru.json
apps/web/public/: yandex_4232fdc5dc030e61.html
deploy/modal/: .gitignore  README.md  bench.py  clipflow_modal.py  measure.py  proof_ffmpeg.py  r2_setup.py  worker.py
docs/: ADMIN_PANEL_RESEARCH.md  BACKEND_AUDIT.md  BENCHMARKS.md  CORE_ARCHITECTURE_AND_FEATURES.md  EVAL.md  EXTERNAL_SERVICES.md  HANDOFF.md  JOURNAL.md  NEXT_SESSION_BOOTSTRAP.md  NEXT_SESSION_BRIEF.md  NEXT_SESSION_DESIGN_PROMPT.md  NIGHT_AUDIT_REPORT_2026-06-15.md  NIGHT_RUN_2026-06-24.md  OVERNIGHT_REPORT_2026-06-13.md  PRODUCTION_BRIEF_2026-06-13.md  PRODUCTION_REPORT_2026-06-13.md  PRODUCT_BRAINSTORM_2026-06-13.md  PRODUCT_BRIEF.md  PROJECT_OVERVIEW.md  README.md  REFRAME_FPS_GRID_INVARIANT.md  ROADMAP.md  SEO_STRATEGY.md  SESSION_2026-06-20.md  SUPABASE_SETUP.md
docs/archive/: 2026-06-30-followups-resilience.md  2026-06-30-render-optimization-proposal.md  BACKEND_DEBUG_BRIEF.md  DEMO_PLAN.md  LAUNCH_BRIEF_2026-06-13.md  NIGHT_AUDIT_REPORT_2026-06-15.md  OVERNIGHT_MODAL_REPORT_2026-06-14.md  PROJECT_OVERVIEW.md  README.md  REDESIGN_VISION_2026-06-23.md  ROADMAP.md  SESSION_2026-06-20.md
docs/archive/_audit/: DOC_AUDIT.md
docs/archive/night-audit/: BE-B.md  BE-C.md  BE-E.md  BE-F.md  BE-H.md  FE-C.md  README.md  REVIEW.md
docs/night-audit/: BE-A.md  BE-D.md  BE-G.md  BE-I.md  FE-A.md  FE-B.md  FE-D.md  FE-E.md  FE-F.md  README.md
docs/superpowers/plans/: 2026-06-07-phase1-k1-queue.md  2026-06-08-active-speaker-reframe.md  2026-06-09-editor-core-mvp.md  2026-06-09-reframe-cut-snap-flash-fix.md  2026-06-10-quip-reframe-flash-fix.md  2026-06-10-transcript-cache.md  2026-06-12-editor-v3.md  2026-06-12-infra-phase-a-state-migration.md  2026-06-13-auth-analytics-plan.md  2026-06-13-infra-scaling-cloud-worker.md  2026-06-17-parallel-clip-render.md  (+6 more)
services/worker/: README.md  pyproject.toml
services/worker/app/: __init__.py  artifacts.py  auth.py  billing.py  cloud_state.py  config.py  db.py  dispatch.py  errors.py  eval.py  export_schema.py  fast_export.py  main.py  models.py  polar.py  run.py  storage.py  supa.py  tasks.py  transcript_cache.py  ytdlp_cookies.py  ytdlp_proxy_pool.py
services/worker/app/agent/: __init__.py  clip_agent.py  loop.py  runs_store.py  tools.py
services/worker/app/asd/: __init__.py  scorer.py
services/worker/app/asd/_vendor/: Classifier.py  Encoder.py  Model.py  loss.py
services/worker/app/editor/: captions_v2.py  chapters.py  defaults.py  hook_ops.py  ops.py  preset_seeds.py  presets.py  reframe_cache.py  replies.py  store.py  style_prefs.py  timeline.py  timemap.py  video_map.py
services/worker/app/pipeline/: __init__.py  asd_reframe.py  preview_moments.py  stage0_import.py  stage1_transcribe.py  stage2_select.py  stage3_reframe.py  stage3_speaker.py  stage4_captions.py  stage5_render.py
services/worker/app/prompts/: agent_clip_editor.v1.txt  regenerate_hook.v1.txt  select_moments.v2.txt  video_map.v1.txt
services/worker/migrations/: 0001_init_billing.sql  0002_credits.sql  0003_usage_idempotency.sql  0004_feedback.sql  0005_promo_codes.sql  0006_job_cancel.sql  0007_agent_runs.sql  0008_video_map.sql  0009_agent_runs_rls.sql  0010_set_clip_ready.sql  0011_progress_detail.sql  0012_preview_moments.sql  0013_reframe_regions.sql  0014_style_preferences.sql
services/worker/prompts/: describe_chapters.v1.txt  select_moments.v1.txt
services/worker/tests/fixtures/: deepgram_sample.json
services/worker/tests/spike/: test_wrap_width_ffmpeg_spike.py
services/worker/tests/unit/: test_agent_api.py  test_agent_loop.py  test_agent_runs_store.py  test_agent_tools.py  test_auth.py  test_billing.py  test_captions_position.py  test_captions_v2.py  test_chapters.py  test_chapters_api.py  test_clip_agent.py  test_cloud_state.py  test_config_llm_guard.py  test_cors.py  test_db.py  test_defaults.py  test_disposable_email.py  test_editor_api.py  test_editor_models.py  test_editor_ops.py  test_editor_store.py  test_email_verification.py  test_emphasis.py  test_errors.py  test_eval.py  test_fast_export.py  test_fonts.py  test_hook.py  test_models.py  test_models_contracts.py  test_multipart.py  test_parallel_render.py  test_polar.py  test_preset_seeds_english.py  test_presets.py  test_preview_moments.py  test_reframe_cache.py  test_reframe_resolve.py  test_replies.py  test_retention.py  (+24 more)
(+151 files in other folders)
