[project]
name = "clipflow-worker"
version = "0.1.0"
description = "ClipFlow worker: FastAPI + pure pipeline (Phase 0 thin pipeline)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.107.0",
    "deepgram-sdk>=7.3.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Имя импорта пакета = "app" (см. CLAUDE.md). Дистрибутив = clipflow-worker.
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Современный ruff: select под [tool.ruff.lint], не [tool.ruff].
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
