[project]
name = "clipflow-worker"
version = "0.1.0"
description = "ClipFlow worker: FastAPI + pure pipeline (Phase 0 thin pipeline)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.107.0",
    "deepgram-sdk>=7.3.1",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.3.17",
]

# Active-speaker reframe (REFRAME_SPEAKER=on). Тяжёлые либы — опционально, базовый воркер
# их не тянет. torch — CPU-колёса (на Linux: --index-url https://download.pytorch.org/whl/cpu).
[project.optional-dependencies]
asd = [
    "torch>=2.2",
    "python_speech_features>=0.6",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Имя импорта пакета = "app" (см. CLAUDE.md). Дистрибутив = clipflow-worker.
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
# app/asd/_vendor — стороннее ядро LR-ASD (MIT), не наш стиль; не линтим/не трогаем.
# force-exclude: чтобы pre-commit (передаёт пути явно) тоже уважал исключение.
extend-exclude = ["app/asd/_vendor"]
force-exclude = true

[tool.ruff.lint]
# Современный ruff: select под [tool.ruff.lint], не [tool.ruff].
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
exclude = ["app/asd/_vendor/"]

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "mediapipe", "mediapipe.*"]
ignore_missing_imports = true

# torch/python_speech_features/scipy — нет (строгих) стабов.
[[tool.mypy.overrides]]
module = ["torch", "torch.*", "python_speech_features", "scipy", "scipy.*"]
ignore_missing_imports = true

# Стороннее ядро ASD — не анализируем (treat as Any), импорты из него = Any.
[[tool.mypy.overrides]]
module = ["app.asd._vendor.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
