[project]
name = "clipflow-worker"
version = "0.1.0"
description = "ClipFlow worker: FastAPI + pure pipeline (Phase 0 thin pipeline)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.107.0",
    "bgutil-ytdlp-pot-provider>=1.3.1",
    "boto3>=1.35",
    "deepgram-sdk>=7.3.1",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.32",
    "python_speech_features>=0.6",
    "scenedetect>=0.6.4",
    "scipy>=1.11",
    "torch>=2.2",
    "uvicorn[standard]>=0.49.0",
    # yt-dlp[default] (НЕ bare yt-dlp): тянет yt-dlp-ejs локально → решатель YouTube nsig/«n»-
    # челленджа в образе, а не качается с GitHub в рантайме (--remote-components ejs:github =
    # сетевая зависимость на каждый запуск). NB: на Modal вступает в силу ТОЛЬКО при следующем
    # `modal deploy` (зеркало в deploy/modal/worker.py). yt-dlp обновлять ЧАСТО (бот-гейт дрейфует).
    "yt-dlp[default]>=2026.3.17",
]

# torch — CPU-колёса (на Linux: --index-url https://download.pytorch.org/whl/cpu).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Имя импорта пакета = "app" (см. CLAUDE.md). Дистрибутив = clipflow-worker.
[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
# app/asd/_vendor — стороннее ядро LR-ASD (MIT), не наш стиль; не линтим/не трогаем.
# force-exclude: чтобы pre-commit (передаёт пути явно) тоже уважал исключение.
extend-exclude = ["app/asd/_vendor"]
force-exclude = true

[tool.ruff.lint]
# Современный ruff: select под [tool.ruff.lint], не [tool.ruff].
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI-инъекторы в дефолтах аргументов — идиома фреймворка, не баг B008.
extend-immutable-calls = ["fastapi.File", "fastapi.Form", "fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]
exclude = ["app/asd/_vendor/"]

[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "mediapipe", "mediapipe.*"]
ignore_missing_imports = true

# torch/python_speech_features/scipy — нет (строгих) стабов.
[[tool.mypy.overrides]]
module = ["torch", "torch.*", "python_speech_features", "scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scenedetect", "scenedetect.*"]
ignore_missing_imports = true

# boto3/botocore — нет строгих стабов (R2 S3-клиент через Any).
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# modal — deploy-инструмент, НЕ зависимость воркера (импортится лениво в app/dispatch.py).
[[tool.mypy.overrides]]
module = ["modal", "modal.*"]
ignore_missing_imports = true

# Стороннее ядро ASD — не анализируем (treat as Any), импорты из него = Any.
[[tool.mypy.overrides]]
module = ["app.asd._vendor.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "none"
tmp_path_retention_count = 0
addopts = "--basetemp=tmp/pytest-tmp"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]
